fixed navigation bar covering posts and notification getting covered by navigation bar

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,24 +1,28 @@
 .main {
-  box-sizing: border-box;
-  max-width: 800px;
-  overflow-y: auto;
-  margin: 0;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
+    box-sizing: border-box;
+    max-width: 800px;
+    overflow-y: auto;
+    margin: 0;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.main-child{
-  color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
-  border-radius: 10px;
-  padding: 15px;
+.main-child {
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    border-radius: 10px;
+    padding: 15px;
 }
-
-
 
 /* @media screen and (max-width: 920px) {
   .main {
     margin-left: 78px;
   }
 } */
+@media screen and (max-width: 1025px) {
+    .main {
+        margin-bottom: 70px;
+        margin-top: 5px;
+    }
+}
