--- a/src/components/notification.css
+++ b/src/components/notification.css
@@ -1,24 +1,24 @@
 .notification {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  padding: 10px;
-  border-radius: 10px;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-right: 20px;
+    margin-bottom: 70px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .notification p {
-  padding: 0;
-  margin: 0;
-  font-size: 18px;
-  color: white;
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
+    color: white;
 }
 
 .success {
-  background-color: rgb(0, 94, 218);
+    background-color: rgb(0, 94, 218);
 }
 
 .error {
-  background-color: rgb(221, 55, 55);
+    background-color: rgb(221, 55, 55);
 }
